# KernelImageProcessing

./: CMakeLists.txt  Image.cpp  Image.h  building.pgm  kip.cpp  kip.h  main.cpp
src/: CMakeLists.txt  Image.cpp  Image.h  kip.cpp  kip.h
test/: CMakeLists.txt  testImage.cpp  testKIP.cpp
