cmake_minimum_required(VERSION 2.8)
if (POLICY CMP0048)
    cmake_policy(SET CMP0048 NEW)
endif (POLICY CMP0048)
project(PBM)
add_executable(PBM main.cpp img.pbm logo.bmp marbles.pbm marbles1.pbm Vd-Orig.pbm src/kip.cpp src/Image.h src/Image.cpp src/kip.h)
add_subdirectory(test)
add_subdirectory(src)
add_subdirectory(lib/googletest-master)
include_directories( ${OpenCV_INCLUDE_DIRS} )
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
target_link_libraries(PBM ${log-lib} ${OpenCV_LIBS} )


include_directories(lib/googletest-master/googletest/include)
include_directories(lib/googletest-master/googlemock/include)
target_link_libraries(PBM gtest gtest_main)